# age-search

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
age_search/: __init__.py  capabilities.py  cli.py  community.py  config.py  cypher.py  engine.py  eval.py  exceptions.py  hooks.py  hybrid.py  hybrid2.py  hybrid_graph.py  hybrid_relational.py  migrations.py  mixins_bm25.py  mixins_fts.py  mixins_graph.py  mixins_vector.py  query.py  relationships.py  results.py  taxonomy.py
examples/: demo.py
models/: doc.py
scripts/: init_db.py
tests/: conftest.py  test_community.py  test_cypher_cfg.py  test_eval.py  test_graph_expand_ids.py  test_hybrid.py  test_hybrid2.py  test_hybrid_graph.py  test_hybrid_relational.py  test_integration_age.py  test_taxonomy_graph_helpers.py  test_taxonomy_relational.py
