[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"


[tool.hatch.version]
path = "age_search/__init__.py"


[project]
name = "age_search"
dynamic = ["version"]
description = "Unified SQLAlchemy helpers for Apache AGE + pgvector + BM25/FTS + hybrid search."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.1.0",
  "pgvector>=0.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "alembic>=1.13"]


[tool.hatch.build.targets.wheel]
packages = ["age_search"]

[tool.hatch.build.targets.wheel.shared-data]
"age_search/py.typed" = "age_search/py.typed"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests that require an external database (Postgres + Apache AGE)",
]

[project.scripts]
agegraph = "age_search.cli:main"